k8s/istio/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: { name: auth-allow, namespace: ott-platform }
spec:
  selector: { matchLabels: { app: auth-api } }
  rules:
  - to: [ { operation: { paths: ["/auth/login","/health","/metrics"] } } ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: { name: license-allow, namespace: ott-platform }
spec:
  selector: { matchLabels: { app: license-api } }
  rules:
  - to: [ { operation: { methods: ["POST"], paths: ["/license"] } } ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: { name: catalog-allow, namespace: ott-platform }
spec:
  selector: { matchLabels: { app: catalog-api } }
  rules:
  - to: [ { operation: { paths: ["/catalog","/health","/metrics"] } } ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: { name: subscription-allow, namespace: ott-platform }
spec:
  selector: { matchLabels: { app: subscription-api } }
  rules:
  - to: [ { operation: { paths: ["/subscription","/health","/metrics"] } } ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: { name: cas-allow, namespace: ott-platform }
spec:
  selector: { matchLabels: { app: cas-api } }
  rules:
  - to: [ { operation: { paths: ["/cas/authorize","/health","/metrics"] } } ]
